# scaffold2

./: .gitignore  LICENSE  README.md  TEST_PLAN.md  docker-compose.yml  env.example  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: database.py
apps/api/app/models/: chat.py  user.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/ollama/: __init__.py  client.py  routes.py
apps/api/app/modules/rag/: __init__.py  routes.py  vector_store.py
apps/api/app/modules/workers/: __init__.py  celery_app.py  routes.py  tasks.py
apps/api/app/routes/: ai.py  auth.py  health.py
apps/api/app/services/: ai_service.py  chat_service.py
apps/web/: README.md  next.config.js  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ChatInterface.tsx  Header.tsx  Sidebar.tsx
infra/docker/: Dockerfile.api  Dockerfile.web
